manifests/2-deploy-rbac-services.yaml
# Source: f5-waf-policy-controller/charts/seaweedfs-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waf-policy-controller-seaweedfs-operator
  namespace: default
  labels:
    app: waf-policy-controller-seaweedfs-operator
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: seaweedfs-operator
    app.kubernetes.io/instance: waf-policy-controller
---
# Source: f5-waf-policy-controller/templates/compiler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waf-policy-controller-f5-waf-compiler-service
  namespace: default
  labels:
    helm.sh/chart: f5-waf-policy-controller-5.14.0
    app.kubernetes.io/name: f5-waf-policy-controller
    app.kubernetes.io/instance: waf-policy-controller
    app.kubernetes.io/version: "5.14.0"
    app.kubernetes.io/managed-by: Helm
    app: waf-policy-controller-f5-waf-compiler-service
    component: compiler-service
    app.kubernetes.io/component: compiler
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      protocol: TCP
  selector:
    app: waf-policy-controller-f5-waf-compiler-service
    component: compiler-service
    app.kubernetes.io/name: f5-waf-policy-controller
    app.kubernetes.io/instance: waf-policy-controller
